--- a/QPayBackend/app.config
+++ b/QPayBackend/app.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+
+    <!--公司內部-->
+    <!-- 雲端機房-->
+    <add key="_site" value="https://api.sinopac.com/funBIZ/QPay.WebAPI/api/" />
+    <add key="XKeyID" value="8edcbb4d-d757-4294-8269-9f7edabeaac6" />
+  </appSettings>
+
   <runtime>
     <gcServer enabled="true"/>
   </runtime>
